[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_7.png" type="Texture" id=1]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_9.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_10.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_11.png" type="Texture" id=4]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_12.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_13.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_14.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_15.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_8.png" type="Texture" id=12]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_16.png" type="Texture" id=14]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Bringer-Of-Death/Individual Sprite/Spell/Bringer-of-Death_Spell_4.png" type="Texture" id=16]
[ext_resource path="res://Spell.gd" type="Script" id=17]
[ext_resource path="res://Assets/sfx/Lightning.mp3" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.91554, 10 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "Pre",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 14 ), null ],
"loop": false,
"name": "Anim",
"speed": 10.0
} ]

[node name="Spell" type="Node2D"]
script = ExtResource( 17 )

[node name="Damage" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2( -7.94533, 36.2631 )
shape = SubResource( 2 )
disabled = true

[node name="PreAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Pre"
frame = 5
playing = true

[node name="Delete" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Lightning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 5.0

[node name="Colision" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="animation_finished" from="PreAnimation" to="." method="_on_PreAnimation_animation_finished"]
[connection signal="timeout" from="Delete" to="." method="_on_Delete_timeout"]
[connection signal="timeout" from="Colision" to="." method="_on_Colision_timeout"]
